Changed the load window styling so that overflow is prevented.

--- a/divassist/divassist/static/window.css
+++ b/divassist/divassist/static/window.css
@@ -1,3 +1,7 @@
+#load-window-body {
+    min-width: 200px;
+}
+
 #window-main-container {
     margin: 0;
     padding-left: 2em;
